fda-202 rename "Animal Drugs" to "Animal & Veterinary"

--- a/pages/animalandveterinary/_content.yaml
+++ b/pages/animalandveterinary/_content.yaml
@@ -1,4 +1,4 @@
-- url: /animaldrug/event/
+- url: /animalandveterinary/event/
   title: Animal drug adverse events
   description:
     - "Reports of animal drug side effects, product use errors, product quality problems, and therapeutic failures."
