--- a/pages/animalandveterinary/_meta.yaml
+++ b/pages/animalandveterinary/_meta.yaml
@@ -1,5 +1,5 @@
-documentTitle: openFDA › Animal Drugs
+documentTitle: openFDA › Animal & Veterinary
 label: API endpoints
-title: Animal Drugs
+title: Animal & Veterinary
 description: "The U.S. Food and Drug Administration (FDA) regulates over-the-counter and prescription animal drugs in the United States. This work covers more than just medicines. For example, certain grooming and pet care products may be considered drugs."
-path: /animaldrug
+path: /animalandveterinary
