fda-202 rename "Animal Drugs" to "Animal & Veterinary"

--- a/pages/animalandveterinary/_content.yaml
+++ b/pages/animalandveterinary/_content.yaml
@@ -1,4 +1,4 @@
-- url: /animaldrug/label/
+- url: /animalandveterinary/label/
   title: Animal drug product labeling
   description:
     - "Structured product information, including prescribing information, for approved animal drug products."
