--- a/pages/animalandveterinary/label/reference/_meta.yaml
+++ b/pages/animalandveterinary/label/reference/_meta.yaml
@@ -1,8 +1,8 @@
-documentTitle: openFDA › Animal Drugs › Drug Labeling API Reference
+documentTitle: openFDA › Animal & Veterinary › Drug Labeling API Reference
 name: Animal Drug labeling Reference
 description: ""
 datasets:
   - SPL
 label: Animal Drug Labeling API Reference
-path: /animaldrug/label/reference
+path: /animalandveterinary/label/reference
 type: endpoint
