fda-202 rename "Animal Drugs" to "Animal & Veterinary"

--- a/pages/animalandveterinary/_content.yaml
+++ b/pages/animalandveterinary/_content.yaml
@@ -1,4 +1,4 @@
-- url: /animaldrug/phishpharm/
+- url: /animalandveterinary/phishpharm/
   title: Animal drug Phish-Pharm
   description:
     - "Data from a free, searchable, literature database that details drug metabolism and pharmacokinetics in fish."
