--- a/pages/animalandveterinary/pet_food/reference/_content.yaml
+++ b/pages/animalandveterinary/pet_food/reference/_content.yaml
@@ -16,20 +16,9 @@
   - meta.results.limit
   - meta.results.total
 - "### Results"
-- "For non-`count` queries, the `results` section includes matching adverse event reports returned by the API."
-- "Each SPL record consists of three sets of fields:"
-- ul:
-  - "Standard SPL fields, including unique identifiers."
-  - "Product-specific fields, the order and contents of which are unique to each product."
-  - "An **openFDA** section: An annotation with additional product identifiers, such as UPC and brand name, of the drug products listed in the labeling."
-- "#### Field variation"
-- Fields vary with the particular product being documented. Some fields are rarely used. Most prescription drug product labeling will feature similar fields, and those fields will contain similar content. Over-the-counter (OTC) drug product labeling will generally feature a different set of fields.
-- The specific requirements for content of these fields vary from product to product. General descriptions of the fields are provided below, along with notable exceptions or exceptional cases. Expect variation.
-- FDA regulations describe these fields more thoroughly than this documentation. The following documents may be useful for more information about [prescription drug product labeling](http://www.accessdata.fda.gov/scripts/cdrh/cfdocs/cfCFR/CFRSearch.cfm?fr=201.57) and [over-the-counter (OTC) drug product labeling](http://www.accessdata.fda.gov/scripts/cdrh/cfdocs/cfCFR/CFRSearch.cfm?fr=201.57).
-- Some fields are considered by the SPL specification as subsections of other fields, but labeling is not always formatted according to the specification. For example, information about prescription drugs’ potential `teratogenic effects` are ordinarily encoded in the teratogenic_effects field, found after (as a subsection of) the `pregnancy` field. However, some labels combine all the content into the `pregnancy` field and do not have a `teratogenic_effects` field. Again, expect variation.
-- Some labeling features data encoded in the wrong fields. These errors may be corrected in subsequent versions of the product labeling.
+- "For non-`count` queries, the `results` section includes matching pet food recall reports returned by the API."
 - "#### Field order"
-- Fields are ordered naturally, as they were found in the original product labeling. Expect variation in field order from product to product.
+- Fields are ordered naturally, as they were found in the source records. Expect variation in field order from record to record.
 - "## Field-by-field reference"
 - Fields and their contents will vary from product to product. Some species don't include breeds, for example. The following descriptions are as accurate as possible but do not cover all the potential variation among field contents.
 - This page groups fields conceptually for ease of reference. In API results, fields will be ordered naturally as in the pet food record.
