FDA-201 Fixed infographic query.

--- a/pages/animalandveterinary/_content.yaml
+++ b/pages/animalandveterinary/_content.yaml
@@ -1,4 +1,4 @@
 - url: /animalandveterinary/pet_food/
-  title: Animal Pet Food
+  title: Pet Food Recall
   description:
-    - "Animal pet food recall records."
+    - "Pet food recall records."
