--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "gatsby": "gatsby",
     "stylus": "gulp stylus",
     "serve": "gatsby develop -p 3000",
-    "dev": "gulp stylus & gatsby develop -p 3000",
+    "dev": "gulp stylus & node $NODE_DEBUG_OPTION ./node_modules/.bin/gatsby develop -p 3000",
     "build": "gatsby build"
   },
   "repository": {
@@ -27,6 +27,7 @@
   "author": "Iodine Inc",
   "license": "MIT",
   "dependencies": {
+    "axios": "0.16.2",
     "babel-polyfill": "^6.9.1",
     "chart.js": "1.1.1",
     "classnames": "2.2.3",
@@ -36,17 +37,27 @@
     "gatsby": "0.10.0",
     "history": "2.0.2",
     "jquery": "2.2.4",
+    "lerna": "2.4.0",
     "localforage": "^1.4.2",
     "lodash": "4.7.0",
     "marked": "0.3.5",
     "matchmedia": "0.1.2",
+    "nivo": "git+ssh://git@github.com:debovis/nivo.git#add_template_label_heatmap1",
+    "compromise": "10.7.2",
+    "pandas-js": "0.2.4",
+    "pondjs": "0.8.7",
+    "rc-slider": "8.3.1",
     "react": "15.6.1",
     "react-chartjs": "0.7.3",
+    "react-data-grid": "latest",
+    "react-datamaps": "git+ssh://git@github.com:debovis/react-datamaps.git",
     "react-document-title": "2.0.1",
     "react-dom": "15.6.1",
     "react-highlight": "0.8.0",
     "react-radio-group": "2.2.0",
     "react-router": "2.0.0",
+    "react-sparkline": "2.0.0",
+    "react-timeseries-charts": "0.12.8",
     "webfontloader": "1.6.24",
     "webpack": "1.12.14"
   },
