--- a/pages/api_endpoints/food/enforcement/_content.yaml
+++ b/pages/api_endpoints/food/enforcement/_content.yaml
@@ -1,3 +1,4 @@
+- visualization
 - "## About food recalls and enforcement reports"
 - "Recalls are an appropriate alternative method for removing or correcting marketed consumer products, their labeling, and/or promotional literature that violate the laws administered by the Food and Drug Administration (FDA). Recalls afford equal consumer protection but generally are more efficient and timely than formal administrative or civil actions, especially when the product has been widely distributed."
 - "Manufacturers and/or distributors may initiate a recall at any time to fulfill their responsibility to protect the public health from products that present a risk of injury or gross deception, or are otherwise defective. Firms may also initiate a recall following notification of a problem by FDA or a state agency, in response to a formal request by FDA, or as ordered by FDA."
