--- a/pages/animalandveterinary/pet_food/_content.yaml
+++ b/pages/animalandveterinary/pet_food/_content.yaml
@@ -4,7 +4,7 @@
 - "getting-started"
 - "downloads"
 - "### How to search this endpoint"
-- "Make API calls to `https://api.fda.gov/animal/pet_food.json` using search parameters for [fields specific to the drug labeling endpoint.](/animalandveterinary/pet_food/reference/)"
+- "Make API calls to `https://api.fda.gov/animal/pet_food.json` using search parameters for [fields specific to the pet food endpoint.](/animalandveterinary/pet_food/reference/)"
 - queryExplorer: oneRecord
 - queryExplorer: countDeadlyProducts
 - queryExplorer: femaleChihuahuas
