--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "marked": "0.3.5",
     "matchmedia": "0.1.2",
     "nivo": "git+ssh://git@github.com:debovis/nivo.git#add_template_label_heatmap1",
-    "compromise": "10.7.2",
+    "react-dropdown": "1.3.2",
     "pandas-js": "0.2.4",
     "pondjs": "0.8.7",
     "rc-slider": "8.3.1",
@@ -51,6 +51,7 @@
     "react-chartjs": "0.7.3",
     "react-data-grid": "latest",
     "react-datamaps": "git+ssh://git@github.com:debovis/react-datamaps.git",
+    "html-react-parser": "0.4.0",
     "react-document-title": "2.0.1",
     "react-dom": "15.6.1",
     "react-highlight": "0.8.0",
