--- a/src/pages/api_endpoints/device/pma/_content.yaml
+++ b/src/pages/api_endpoints/device/pma/_content.yaml
@@ -1,6 +1,7 @@
 - "## About device pre-market approval"
 - "The PMA dataset contains details about specific products and the sponsors of premarket approval applications and supplements. It also contains administrative and tracking information about the applications and receipt and decision dates. Premarket approval (PMA) is the FDA process of scientific and regulatory review to evaluate the safety and effectiveness of Class III medical devices. An approved PMA Application is, in effect, a private license granted to the applicant for marketing a particular medical device."
 - "Class III devices are those that support or sustain human life, are of substantial importance in preventing impairment of human health, or that present a potential, unreasonable risk of illness or injury. Due to the level of risk associated with Class III devices, FDA has determined that general and special controls alone are insufficient to assure the safety and effectiveness of class III devices."
+- visualization
 - "### How to search this endpoint"
 - "Make API calls to `https://api.fda.gov/device/pma.json` using search parameters for fields specific to the device PMA endpoint."
 - queryExplorer: oneAPPR
