--- a/src/pages/api_endpoints/food/event/_content.yaml
+++ b/src/pages/api_endpoints/food/event/_content.yaml
@@ -6,6 +6,7 @@
 - "A report may list several products, as well as several reactions that the consumer experienced. No individual food, dietary supplements, or cosmetic product is connected to any individual reaction. When a report lists multiple products and multiple reactions, there is no way to conclude from the data therein that a given product is responsible for a given reaction."
 - "Reports to FDA do not necessarily include all relevant data, such as whether an individual also suffered from other medical conditions (such as cardiac disease) or took other supplements or medication at the same time. They also may not include accurate or complete contact information for FDA to seek further information about the event, or complainants may choose not to participate in the follow-up investigation."
 - "When important information is missing from a report, it is difficult for FDA to fully evaluate whether the product caused the adverse event or simply coincided with it. The fact that an adverse event happened after a person took a dietary supplement does not necessarily mean that the dietary supplement caused the adverse event."
+- visualization
 - "### How to search this endpoint"
 - "Make API calls to `https://api.fda.gov/food/event.json` using search parameters for fields specific to the food adverse events endpoint."
 - queryExplorer: oneReport
