updated with fda-114

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "babel-eslint": "^8.0.1",
-    "chart.js": "1.1.1",
     "calculate-size": "latest",
+    "chart.js": "1.1.1",
     "classnames": "^2.2.5",
     "copy-webpack-plugin": "^4.2.0",
     "dateformat": "^3.0.2",
@@ -31,9 +31,9 @@
     "gatsby-remark-copy-linked-files": "^1.0.0-beta.6",
     "gatsby-source-filesystem": "^2.0.0-alpha.1",
     "html-react-parser": "0.4.0",
-    "loader-utils": "^1.0.2",
+    "immutability-helper": "^2.5.0",
     "jquery": "^3.2.1",
-    "recharts": "1.0.0-beta.0",
+    "loader-utils": "^1.0.2",
     "localforage": "^1.5.2",
     "marked": "^0.3.6",
     "matchmedia": "^0.1.2",
@@ -41,16 +41,19 @@
     "nivo": "git+ssh://git@github.com:debovis/nivo.git#add_template_label_heatmap1",
     "pandas-js": "0.2.4",
     "pondjs": "0.8.7",
+    "rc-slider": "8.3.1",
+    "react-autosuggest": "^9.3.2",
     "react-chartjs": "^0.8.0",
-    "react-datamaps": "git+ssh://git@github.com:debovis/react-datamaps.git",
     "react-data-grid": "latest",
+    "react-datamaps": "git+ssh://git@github.com:debovis/react-datamaps.git",
     "react-document-title": "^2.0.3",
     "react-highlight": "^0.10.0",
     "react-modal": "^3.1.0",
     "react-promise": "^2.0.0",
     "react-radio-group": "^3.0.2",
+    "react-select": "^1.0.0-rc.10",
     "react-timeseries-charts": "0.12.8",
-    "rc-slider": "8.3.1",
+    "recharts": "^1.0.0-beta.0",
     "stylus": "^0.54.5"
   },
   "keywords": [
