--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:css": "stylus -w ./src/css/app.styl -o ./src/css/build/app.css -I ./node-modules/nib",
     "dev:site": "gatsby develop -p 3000",
-    "build": "gatsby build",
+    "build": "gatsby build --verbose",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'"
   },
   "repository": {
@@ -44,7 +44,6 @@
     "rc-slider": "8.3.1",
     "react-autosuggest": "^9.3.2",
     "react-chartjs": "^0.8.0",
-    "react-data-grid": "latest",
     "react-datamaps": "git+ssh://git@github.com:debovis/react-datamaps.git",
     "react-document-title": "^2.0.3",
     "react-highlight": "^0.10.0",
@@ -52,6 +51,7 @@
     "react-promise": "^2.0.0",
     "react-radio-group": "^3.0.2",
     "react-select": "^1.0.0-rc.10",
+    "react-table": "^6.7.4",
     "react-timeseries-charts": "0.12.8",
     "recharts": "^1.0.0-beta.0",
     "stylus": "^0.54.5"
