--- a/src/pages/api_endpoints/food/event/_content.yaml
+++ b/src/pages/api_endpoints/food/event/_content.yaml
@@ -2,6 +2,7 @@
   - "The openFDA food, dietary supplements, and cosmetic adverse event API returns data from the [Center for Food Safety and Applied Nutrition Adverse Event Reporting System (CAERS)](/data/caers/), a database that contains information on adverse event and product complaint reports submitted to FDA for foods, dietary supplements, and cosmetics. The database is designed to support CFSAN's safety surveillance program."
   - visualization
 
+
   - "#### Key facts":
     - ul:
       - "**Source of the data:** [Center for Food Safety and Applied Nutrition Adverse Event Reporting System (CAERS)](/data/caers/)"
@@ -35,6 +36,8 @@
   - "*2.* Review the [list of searchable fields](#searchable-fields) available in the food adverse event dataset."
   - "*3.* Try out the Food Adverse Event API using the [interactive examples](#using-the-interactive-chart-to-learn-the-API) and tools below."
   - "Then, when you are ready, obtain an API Key. While you don’t need an API Key to try or use the API, we recommend you get one if you are planning to use the API on a regular basis. For more information on API Keys, see the [API Reference page](/getting_started/api_basics/reference/)."
+
+  - infographic
 
   - "### Making a simple API call":
     - "You can call the API from a web browser. Simply type a valid API query in your browser’s address bar and press the Enter key."
