--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "matchmedia": "^0.1.2",
     "nib": "^1.1.2",
     "node-sass": "^4.14.1",
+    "pandas-js": "0.2.4",
     "pondjs": "0.8.7",
     "prismjs": "^1.22.0",
     "raw-loader": "^4.0.2",
