--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "localforage": "^1.5.2",
     "marked": "^0.3.6",
     "matchmedia": "^0.1.2",
+    "moment": "2.20.1",
     "nib": "^1.1.2",
     "nivo": "0.31.0",
     "pandas-js": "0.2.4",
@@ -52,6 +53,7 @@
     "rc-slider": "8.3.1",
     "react-autosuggest": "^9.3.2",
     "react-chartjs": "^0.8.0",
+    "rc-checkbox": "2.1.4",
     "react-custom-scrollbars": "^4.2.1",
     "react-datamaps": "git+ssh://git@github.com:debovis/react-datamaps.git",
     "react-document-title": "^2.0.3",
