--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
+    "file-saver": "1.3.3",
     "flow": "^0.2.3",
     "gatsby": "1.9.123",
     "gatsby-link": "1.6.22",
@@ -41,6 +42,7 @@
     "html-react-parser": "0.4.0",
     "immutability-helper": "^2.5.0",
     "jquery": "^3.2.1",
+    "json2csv": "4.0.0-alpha.0",
     "loader-utils": "1.0.2",
     "localforage": "^1.5.2",
     "marked": "^0.3.6",
